# futils

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  compile.sh  demo.sh  rebuild.sh  todo
docs/: Makefile  components.rst  conf.py  datapacket.rst  dloader.rst  ecs.rst  entities.rst  fender.rst  fstring.rst  gettingstarted.rst  gotobindir.rst  index.md  index.rst  inputkeys.rst  installation.rst  introduction.rst  make.bat  namedmaps.rst  position.rst  range.rst  readme.rst  rendering.rst  sigcatch.rst  systems.rst  utils.rst
docs/ecs/: .#entity.rst  component.rst  entity.rst  entitymanager.rst  system.rst
docs/fender/: Fender.rst  camera.rst  events.rst  gameObject.rst  index.md  index.rst  inputs.rst  network.rst  window.rst  world.rst
projects/: CMakeLists.txt
projects/fender/: CMakeLists.txt  compile.sh  createFenderProject.sh  maj.txt  rebuild.sh  test.sh  testOrias.sh
projects/fender/bundledModules/: createModule.sh
projects/fender/bundledModules/FenderTemplatesDirectory/: TEMPLATE.cpp  TEMPLATE.md
projects/fender/bundledModules/SFML/: AssetLoader.cpp  CMakeLists.txt  Children.cpp  Children.hpp  Clickable.cpp  Clickable.hpp  GameObject.cpp  Grid.cpp  Grid.hpp  Hoverable.hpp  Image.hpp  SFML.cpp  SFML.hpp  Text.cpp  Window.cpp
projects/fender/bundledModules/SFML/include/Components/: ChildInfo.hpp  ListView.hpp  Music.hpp
projects/fender/bundledModules/SFML/include/Entities/: Image.hpp
projects/fender/bundledModules/TEMPLATES/: TEMPLATE.cpp  TEMPLATE.hpp
projects/fender/bundledModules/Test/: CMakeLists.txt
projects/fender/bundledSystems/: compileSystem.sh  createSystem.sh
projects/fender/bundledSystems/.TemplateSystem/: CMakeLists.txt  TEMPLATE.hpp
projects/fender/bundledSystems/Fysix/: CMakeLists.txt  Collision.cpp  Fysix.cpp  Fysix.hpp  Fysix.md
projects/fender/bundledSystems/Log/: CMakeLists.txt
projects/fender/bundledSystems/SFML/: Border.cpp  CMakeLists.txt  Children.cpp  Editable.cpp  GameObject.hpp  Grid.cpp  Hoverable.cpp  Image.cpp  SFML.cpp  SFML.md  Sprite.hpp  System.hpp  Text.cpp  Window.cpp  compile.sh
projects/fender/bundledSystems/SFML/Camera/: Camera.cpp  Camera.hpp  IsoCam.cpp  IsoCam.hpp  NormalCam.cpp  NormalCam.hpp
projects/fender/bundledSystems/SFML/include/Components/: Border.hpp  Hoverable.hpp
projects/fender/bundledSystems/SFML/include/Entities/: Button.hpp  Camera.hpp  GameObject.hpp  ListView.hpp  TextBox.hpp  World.hpp
projects/fender/demo/: CMakeLists.txt  demo
projects/fender/demo/include/: App.hpp
projects/fender/demo/src/App/: App.cpp
projects/fender/demo/src/App/Extensions/: Debug.cpp  Debug.hpp  SimpleGrid.cpp  compile.sh
projects/fender/demo/src/App/Extensions/Debug/: CMakeLists.txt  Debug.cpp  Debug.hpp  compileandmove.sh
projects/fender/demo/src/App/Modules/: .template.cpp  .template.hpp  AModule.hpp  AdvancedGUI.cpp  AdvancedGUI.hpp  Collision.cpp  Collision.hpp  Grid.cpp  Grid.hpp  Loader.cpp  Loader.hpp  Menu.cpp  Menu.hpp  NewModule.sh  OtherSystem.cpp  OtherSystem.hpp  Runner.cpp  Runner.hpp  SimpleGrid.cpp  SimpleGrid.hpp  Text.cpp  Text.hpp  WindowTest.cpp  WindowTest.hpp  WindowTest1.cpp
projects/fender/doc/: ecs.md
projects/fender/fenderGettingStarted/: update.sh
projects/fender/include/: events.hpp  fender.hpp
projects/fender/orias/: CMakeLists.txt  all.sh  config.json
projects/fender/orias/futils/Components/: Editable.hpp  World.hpp  rigidBody.hpp
projects/fender/orias/futils/Entities/: Bar.hpp  Button.hpp  World.hpp
projects/fender/orias/futils/Systems/: Collision.hpp  ListView.hpp  Text.hpp
projects/fender/orias/include/GameObjects/Game/: Player.hpp
projects/fender/orias/include/GameObjects/UI/: Button.hpp  MenuButton.hpp  Window.hpp
projects/fender/orias/modules/: libLog.so.1.0  libSFML.so.1.0
projects/fender/orias/src/: main.cpp
projects/fender/orias/src/Systems/: Game.hpp  Splashscreen.cpp  Splashscreen.hpp
projects/fender/src/: Fender.cpp
projects/fender/src/Components/: Bar.hpp  Camera.hpp  ChildInfo.hpp  Children.cpp  Children.hpp  Clickable.cpp  Clickable.hpp  Editable.cpp  Editable.hpp  GameObject.hpp  Hoverable.cpp  Image.hpp  ListView.hpp  Sprite.hpp  Text.cpp  Text.hpp  ViewInfo.cpp  ViewInfo.hpp  World.hpp  rigidBody.cpp
projects/fender/src/Entities/: Bar.cpp  Bar.hpp  Button.cpp  Button.hpp  Camera.hpp  GameObject.hpp  Image.cpp  Image.hpp  Input.hpp  InputField.cpp  InputField.hpp  ListView.cpp  ListView.hpp  Music.cpp  Sprite.cpp  Sprite.hpp  Text.hpp  TextBox.cpp  TextBox.hpp  Window.hpp  World.hpp
projects/fender/src/Systems/: Log.cpp
projects/fender/src/Systems/Fysics/: Collision.cpp  Fysics.cpp  Fysics.hpp  RigidBody.cpp  RigidBody.hpp  System.cpp  System.hpp
projects/fender/src/Systems/SFML/: AssetLoader.cpp  AssetLoader.hpp  Border.cpp  Camera.cpp  Camera.hpp  Children.cpp  Clickable.cpp  Editable.hpp  Image.cpp  Input.cpp  Input.hpp  ListView.cpp  ListView.hpp  SFMLRenderer.cpp  SFMLRenderer.hpp  Sprite.cpp  Sprite.hpp  System.hpp  Text.cpp  Text.hpp  Window.cpp
tests/: CMakeLists.txt  Callback.cpp
utils/: dloader.hpp  ecs.hpp  inputKeys.hpp  log.hpp  mediator.hpp  rendering.hpp  sigCatch.hpp  types.hpp
