cmake_minimum_required(VERSION 3.9)
project(SFML VERSION 1.0 DESCRIPTION "SFML system for fender")
set(CMAKE_CXX_STANDARD 17)
FILE (GLOB SOURCES ./*.cpp ./*.hpp)
add_library(SFML SHARED ${SOURCES} include/events.hpp)
target_include_directories(SFML PUBLIC include utils)
target_link_libraries(SFML -lstdc++fs)
set_target_properties(SFML PROPERTIES VERSION ${PROJECT_VERSION})
set_target_properties(SFML PROPERTIES PUBLIC_HEADER SFML.hpp)