cmake_minimum_required(VERSION 3.9)
project(TEMPLATE_MODULE_NAME VERSION 1.0 DESCRIPTION "TEMPLATE_MODULE_NAME system for fender")
add_library(TEMPLATE_MODULE_NAME SHARED TEMPLATE_MODULE_NAME.cpp TEMPLATE_MODULE_NAME.hpp include/events.hpp)
target_include_directories(TEMPLATE_MODULE_NAME PUBLIC include utils)
set_target_properties(TEMPLATE_MODULE_NAME PROPERTIES VERSION ${PROJECT_VERSION})
set_target_properties(TEMPLATE_MODULE_NAME PROPERTIES PUBLIC_HEADER TEMPLATE_MODULE_NAME.hpp)